manifests/go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
        - name: go-app
          image: us-central1-docker.pkg.dev/astute-fort-462914-g6/test-cfx/go-app
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: go-app
spec:
  type: LoadBalancer
  selector:
    app: go-app
  ports:
    - port: 80
      targetPort: 8080
