manifests/go-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: your_external_loadbalancerip.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-app
                port:
                  number: 80
